--- a/package.json
+++ b/package.json
@@ -10,11 +10,12 @@
   },
   "dependencies": {
     "axios": "^1.3.0",
-
     "bootstrap": "^5.2.3",
-
+    "jspdf": "^2.5.1",
+    "jspdf-autotable": "^3.5.28",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "useref": "^1.4.4"
   },
   "devDependencies": {
     "@types/react": "^18.0.26",
