--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "jspdf": "^2.5.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.8.0"
+    "react-router-dom": "^6.8.0",
+    "useref": "^1.4.4"
   },
   "devDependencies": {
     "@types/react": "^18.0.26",
